[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3.31"
md5 = "0.7.0"
nom = "8.0.0"
nom-language = "0.1.0"
rayon = "1.10.0"
tokio = { version = "1.44.1", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
